capacityproviders/fargate/cdk.out/ecsworkshop-capacityproviders-fargate.template.json
{
  "Resources": {
    "FargateCapacityProviderServiceLB3C8F1707": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "FargateCapacityProviderServiceLBSecurityGroupA31B6195",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          "subnet-03689657e2849a8fc",
          "subnet-051f9ae27f68f8f74"
        ],
        "Type": "application"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/LB/Resource"
      }
    },
    "FargateCapacityProviderServiceLBSecurityGroupA31B6195": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB ecsworkshopcapacityprovidersfargateFargateCapacityProviderServiceLBE252483E",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": "vpc-0cad99f4a01936d39"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/LB/SecurityGroup/Resource"
      }
    },
    "FargateCapacityProviderServiceLBSecurityGrouptoecsworkshopcapacityprovidersfargateFargateCapacityProviderServiceSecurityGroup904105665000197B1D89": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "FargateCapacityProviderServiceLBSecurityGroupA31B6195",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "FargateCapacityProviderServiceSecurityGroupF0D9098B",
            "GroupId"
          ]
        },
        "FromPort": 5000,
        "ToPort": 5000
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/LB/SecurityGroup/to ecsworkshopcapacityprovidersfargateFargateCapacityProviderServiceSecurityGroup90410566:5000"
      }
    },
    "FargateCapacityProviderServiceLBPublicListener81ED71E7": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "FargateCapacityProviderServiceLBPublicListenerECSGroup64EDCBC8"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "FargateCapacityProviderServiceLB3C8F1707"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/LB/PublicListener/Resource"
      }
    },
    "FargateCapacityProviderServiceLBPublicListenerECSGroup64EDCBC8": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": "vpc-0cad99f4a01936d39"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "FargateCapacityProviderServiceTaskDefTaskRole240ABAF7": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/TaskDef/TaskRole/Resource"
      }
    },
    "FargateCapacityProviderServiceTaskDefTaskRoleDefaultPolicy88C80793": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecs:ListTasks",
                "ecs:DescribeTasks"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "FargateCapacityProviderServiceTaskDefTaskRoleDefaultPolicy88C80793",
        "Roles": [
          {
            "Ref": "FargateCapacityProviderServiceTaskDefTaskRole240ABAF7"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/TaskDef/TaskRole/DefaultPolicy/Resource"
      }
    },
    "FargateCapacityProviderServiceTaskDefB0B80EC1": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": "adam9098/ecsdemo-capacityproviders:latest",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "FargateCapacityProviderServiceTaskDefwebLogGroup9A7D3AC7"
                },
                "awslogs-stream-prefix": "FargateCapacityProviderService",
                "awslogs-region": "us-west-1"
              }
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 5000,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "FargateCapacityProviderServiceTaskDefExecutionRoleF572264B",
            "Arn"
          ]
        },
        "Family": "ecsworkshopcapacityprovidersfargateFargateCapacityProviderServiceTaskDefCD43678C",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "FargateCapacityProviderServiceTaskDefTaskRole240ABAF7",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/TaskDef/Resource"
      }
    },
    "FargateCapacityProviderServiceTaskDefwebLogGroup9A7D3AC7": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/TaskDef/web/LogGroup/Resource"
      }
    },
    "FargateCapacityProviderServiceTaskDefExecutionRoleF572264B": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/TaskDef/ExecutionRole/Resource"
      }
    },
    "FargateCapacityProviderServiceTaskDefExecutionRoleDefaultPolicy83908004": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FargateCapacityProviderServiceTaskDefwebLogGroup9A7D3AC7",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "FargateCapacityProviderServiceTaskDefExecutionRoleDefaultPolicy83908004",
        "Roles": [
          {
            "Ref": "FargateCapacityProviderServiceTaskDefExecutionRoleF572264B"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "FargateCapacityProviderService6E87B372": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Fn::ImportValue": "ECSClusterName"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 10,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 5000,
            "TargetGroupArn": {
              "Ref": "FargateCapacityProviderServiceLBPublicListenerECSGroup64EDCBC8"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "FargateCapacityProviderServiceSecurityGroupF0D9098B",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              "subnet-06edaab92837bf818",
              "subnet-01e13cf6b1ec8718c"
            ]
          }
        },
        "PlatformVersion": "1.4.0",
        "ServiceName": "ecsdemo-capacityproviders-fargate",
        "TaskDefinition": {
          "Ref": "FargateCapacityProviderServiceTaskDefB0B80EC1"
        }
      },
      "DependsOn": [
        "FargateCapacityProviderServiceLBPublicListenerECSGroup64EDCBC8",
        "FargateCapacityProviderServiceLBPublicListener81ED71E7"
      ],
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/Service/Service"
      }
    },
    "FargateCapacityProviderServiceSecurityGroupF0D9098B": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": "vpc-0cad99f4a01936d39"
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/Service/SecurityGroup/Resource"
      }
    },
    "FargateCapacityProviderServiceSecurityGroupfromecsworkshopcapacityprovidersfargateFargateCapacityProviderServiceLBSecurityGroupE024A5C050001D9B585F": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 5000,
        "GroupId": {
          "Fn::GetAtt": [
            "FargateCapacityProviderServiceSecurityGroupF0D9098B",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "FargateCapacityProviderServiceLBSecurityGroupA31B6195",
            "GroupId"
          ]
        },
        "ToPort": 5000
      },
      "Metadata": {
        "aws:cdk:path": "ecsworkshop-capacityproviders-fargate/FargateCapacityProviderService/Service/SecurityGroup/from ecsworkshopcapacityprovidersfargateFargateCapacityProviderServiceLBSecurityGroupE024A5C0:5000"
      }
    }
  },
  "Outputs": {
    "FargateCapacityProviderServiceLoadBalancerDNS1BE52BC6": {
      "Value": {
        "Fn::GetAtt": [
          "FargateCapacityProviderServiceLB3C8F1707",
          "DNSName"
        ]
      }
    },
    "FargateCapacityProviderServiceServiceURL128E9753": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "FargateCapacityProviderServiceLB3C8F1707",
                "DNSName"
              ]
            }
          ]
        ]
      }
    }
  }
}
